item category full integration
